--- a/themes/icarus/include/schema/config.json
+++ b/themes/icarus/include/schema/config.json
@@ -24,7 +24,7 @@
                 "object"
             ],
             "description": "Path or URL to the website's logo",
-            "default": "/img/logo.svg",
+            "default": "/img/logo.png",
             "properties": {
                 "text": {
                     "type": "string",
